# ai-health-agent

./: .env.example  .gitignore  README.md  demo_script.md  pyproject.toml
health_agent/: __init__.py
health_agent/apps/: __init__.py  cli.py  seed.py
health_agent/apps/web/: __init__.py  server.py
health_agent/apps/web/static/: app.js  index.html  style.css
health_agent/core/: __init__.py  agent.py  profile_builder.py
health_agent/db/: __init__.py  repos.py  schema.py
health_agent/domain/: __init__.py  analysis.py
health_agent/llm/: __init__.py  client.py  mock.py  prompts.py  types.py
health_agent/mcp/: __init__.py  server.py
health_agent/models/: __init__.py  agent.py  food.py  medical.py  supplements.py
tests/: conftest.py  test_smoke.py
