[project]
name = "health-agent"
version = "0.1.0"
description = "Personal health agent (v0: food + supplements + conditions). Session 5 / llm_gatewayV2 showcase."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
health-agent = "health_agent.apps.cli:app"
health-agent-mcp = "health_agent.mcp.server:run"
health-agent-web = "health_agent.apps.web.server:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["health_agent*"]
